Edited wiki page through web user interface.

--- a/wiki/TODOs.wiki
+++ b/wiki/TODOs.wiki
@@ -2,6 +2,7 @@
 
 = Put all todo's here for the next realease =
 
+  * Sterren visualizeren in nieuwe map!
   * "... is leaving" oplossen
   * Hovercraft select box
   * Positie correct replicaten en weergeven
