Edited wiki page through web user interface.

--- a/wiki/TODOs.wiki
+++ b/wiki/TODOs.wiki
@@ -6,3 +6,4 @@
   * "... is leaving" oplossen
   * Hovercraft select box
   * Positie correct replicaten en weergeven
+  * Crash bij het returnen naar lobby met bots
