Edited wiki page through web user interface.

--- a/wiki/TODOs.wiki
+++ b/wiki/TODOs.wiki
@@ -7,3 +7,4 @@
   * Hovercraft select box
   * Positie correct replicaten en weergeven
   * Crash bij het returnen naar lobby met bots
+  * Countdown in lobby chat wanneer admin op start drukt
