--- a/wiki/TODOs.wiki
+++ b/wiki/TODOs.wiki
@@ -5,8 +5,8 @@
   * Sterren visualizeren in nieuwe map!
   * Hovercraft select box
   * Positie correct replicaten en weergeven
-  * Crash bij het returnen naar lobby met bots
   * Countdown in lobby chat wanneer admin op start drukt
   * Server.ini "bots=1" doet niets
   * Logo en laadscherm ontwerpen
   * Crash wanneer server could not be reached
+  * Overlays zomaar in de lucht
