Edited wiki page through web user interface.

--- a/wiki/TODOs.wiki
+++ b/wiki/TODOs.wiki
@@ -10,3 +10,4 @@
   * Logo en laadscherm ontwerpen
   * Crash wanneer server could not be reached
   * Overlays zomaar in de lucht
+  * Reset gaat altijd naar 2e checkpoint
