--- a/trunk/doc/verslag/verslag-hovercraftuniverse.tex
+++ b/trunk/doc/verslag/verslag-hovercraftuniverse.tex
@@ -105,7 +105,8 @@ De \textbf{modellen} zijn gedefinieerd in het (niet open) bestandsformaat van 3D
 \begin{lstlisting}
 <Hovercraft>
     <Name>USA Hovercraft</Name>
-    <Description>Fast and responsive, rather light.</Description>
+    <Description>Fast and responsive, rather light.
+        </Description>
     <OgreEntity>USAHovercraft</OgreEntity>
     <ProcessInterval>0.016</ProcessInterval>
     <Speed>100</Speed>
@@ -233,7 +234,7 @@ keyname=value
 keyname = value, value , value #comment
 \end{lstlisting}
 
-\section{Rolverdeling en verantwoordelijkheden}}
+\section{Rolverdeling en verantwoordelijkheden}
 \begin{description}
 	\item[Kristof Overdulve] Algemene client rendering architectuur, Ogre visualisatie en animatie, 2D artist, 3D modellering
 	\item[Pieter-Jan Pintens] Havok Physics, 3D modellering, Ogre visualisatie en animatie
